# hasherkawpow-sys

./: .gitignore  Cargo.toml  README.md  build.rs
src/: CMakeLists.txt  lib.rs  libhasherkawpow.cc
src/ethash/: ethash-internal.hpp  ethash.cpp  managed.cpp  progpow.cpp
src/include/: ethash.h  ethash.hpp  progpow.hpp  sync.h  threadsafety.h
